force-app/main/default/objects/Scheduler_Bucket_Slots__mdt/Scheduler_Bucket_Slots__mdt.object-meta.xml
<CustomObject>
    <label>Scheduler Bucket Slots</label>
    <pluralLabel>Scheduler Bucket Slots</pluralLabel>
</CustomObject>