force-app/main/default/objects/Scheduler_Bucket_Slots__mdt/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>EndTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>