force-app/main/default/objects/Scheduler_Bucket_Slots__mdt/fields/Slot_Time__c.field-meta.xml
<CustomField>
    <fullName>Slot_Time__c</fullName>
    <label>Slot Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>