force-app/main/default/objects/Scheduler_Bucket_Slots__mdt/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>StartTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>